# radioboat

./: .gitignore  .gitmodules  .goreleaser.yaml  .ignore  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  changelog.md  clippy.toml  default.nix  flake.nix  go.mod  go.sum  justfile  main.go  makefile  package.nix  radioboat.toml  remote.toml  shell.nix  stations.csv  tbump.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  go.yml  release.yml  test-nix.yml  test.yml
buildinfo/: build.go
cmd/: edit.go  health.go  root.go  version.go
dbus/: dbus.go  introspect.go  mediaplayer2.go  metadata.go
dbushandler/: dbus.go  dbusplayer.go
docs/: README.md  architecture.md  config.md
ice/: ice.go
icy/: icy.go  icy_test.go
internal/player/: mpv.go
internal/players/: mpv.go  player.go
internal/tui/: keys.go  messageBox.go  style.go  tui.go
internal/urls/: urls.go  urls_test.go
internal/utils/: booleanPrompt.go  fileutils.go  mathutils.go  mathutils_test.go  stringutils.go
players/: mpv.go  player.go
src/: config.rs  icy.rs  macos.rs  main.rs  mpris.rs  player.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tui/: messageBox.go  tui.go
urls/: urls.go  urls_test.go
utils/: booleanPrompt.go  fileutils.go  mathutils_test.go
