[package]
name = "radioboat"
version = "0.1.0"
edition = "2021"
description = "A terminal web radio client"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
toml = "0.8"
shellexpand = "3"
