[package]
name = "radioboat"
version = "0.4.0"
edition = "2021"
description = "Radioboat is a terminal web radio client, built with simplicity in mind."
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
futures = "0.3"
toml = "0.8"
shellexpand = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
